--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navigation">
-  <img class="logo" src="file:///C:/Users/Jessica/AppData/Local/Temp/Temp1_project-tracking-intro-component-master.zip/project-tracking-intro-component-master/images/logo.svg" alt="logo">
+  <img class="logo" src="images/logo.svg" alt="logo">
 
   <ul>
    <li>
@@ -47,7 +47,7 @@
 
     </div>
 <div class="info-img">
-    <img class="illustration-devices" src="file:///C:/Users/Jessica/AppData/Local/Temp/Temp1_project-tracking-intro-component-master.zip/project-tracking-intro-component-master/images/illustration-devices.svg" alt="Illustration-devices">
+    <img class="illustration-devices" src="images/illustration-devices.svg" alt="Illustration-devices">
 </div>
   </article>
 
